# Modeling-Google-TPU

./: .gitignore  AGENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  bf16_mxu_rhs_coalesced_layout.md  bf16_tiled_layout.md  data_layout_visualization.md  multi_kernel_execution_plan.md  tpu_reference_notes.md  vliw_instruction_bundle_format.md
scripts/: arch_state.py  dump_to_test.py  filter_files.py  instruction.py  isa.py  memory.py  parse.py  parser.py  run.py  run_kernel.py  run_simple_matmul.py  run_tests.py  sim.py  test_kernels.py  test_parser_slots.py  visualize_layouts.py
tests/: kernel_generation_notes.md
tests/fused_nonlinear_f32/: jax_source.py
tests/lane_reduce_bf16_nonzero_init/: jax_source.py
tests/linear_f32/: source.py
tests/linear_tanh_f32/: jax_source.py  source.py
tests/matmul_bf16/: jax_source.py  source.py
tests/matmul_bf16_rhs_transpose/: jax_source.py
tests/matmul_f32/: jax_source.py  source.py
tests/matmul_simple/: jax_source.py
tests/reduce_column_f32/: source.py
tests/reduce_row_f32/: source.py
tests/softmax_f32/: jax_source.py  source.py
tests/vector_add/: jax_source.py
tests/vector_add_bf16/: jax_source.py
tests/vector_add_bf16_16x128/: jax_source.py
tests/vector_add_bf16_tiled/: jax_source.py  source.py
tests/vector_add_f32/: source.py
tests/vector_add_f32_tiled/: jax_source.py  source.py
tests/vector_add_f8/: jax_source.py
tests/vector_add_simple/: jax_source.py
tpu/: arch_state.py  instruction.py  isa.py  memory.py  parser.py  program.py  sim.py  tiling.py
(+262 files in other folders)
